--- a/Objects/projeto_final.build_log.htm
+++ b/Objects/projeto_final.build_log.htm
@@ -27,8 +27,9 @@ Project File Date:  11/24/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.22', folder: 'C:\Users\guilh\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target_1'
+compiling RTX_Conf_CM.c...
 linking...
-Program Size: Code=10852 RO-data=764 RW-data=44 ZI-data=4032  
+Program Size: Code=10852 RO-data=764 RW-data=44 ZI-data=4288  
 ".\Objects\projeto_final.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -80,7 +81,7 @@ Package Vendor: Keil
       Source file:   Device/Source/system_stm32f10x.c
       Include file:  RTE_Driver/Config/RTE_Device.h
       Source file:   Device/Source/ARM/STM32F1xx_OPT.s
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
